[package]
name = "oprtc-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["ws", "rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
eyre = "0.6"
dotenv = "0.15.0"
